Update versions & remove things