@@ -1,54 +1,29 @@
 import sbt._
 
-import scalariform.formatter.preferences._
-
-seq(Revolver.settings: _*)
-
-
-/* scala versions and options */
-scalaVersion := "2.11.7"
+scalaVersion := "$scala_version$"
 
 // These options will be used for *all* versions.
 scalacOptions ++= Seq(
   "-deprecation"
   , "-unchecked"
   , "-encoding", "UTF-8"
-  , "-Xlint"
   , "-Yclosure-elim"
   , "-Yinline"
   , "-Xverify"
   , "-feature"
   , "-language:postfixOps"
-  //,"-optimise"
-)
-
-javacOptions ++= Seq("-Xlint:unchecked", "-Xlint:deprecation", "-source", "1.7", "-target", "1.7")
-javaOptions in Universal ++= Seq(
-  "-J-server",
-  "-J-Xms3g -Xmx3g",
-  "-J-XX:+UseConcMarkSweepGC -XX:+CMSParallelRemarkEnabled",
-  "-J-XX:+UseCMSInitiatingOccupancyOnly -XX:CMSInitiatingOccupancyFraction=68",
-  "-J-XX:+ScavengeBeforeFullGC -XX:+CMSScavengeBeforeRemark",
-  "-J-XX:+UseGCLogFileRotation -XX:NumberOfGCLogFiles=10 -XX:GCLogFileSize=100M"
 )
 
 val FinchVersion = "$finch_version$"
 val CirceVersion = "$circe_version$"
 
 libraryDependencies ++= Seq(
-  // -- config
   "com.typesafe" % "config" % "1.3.1",
-  // -- testing --
-  "org.scalacheck" %% "scalacheck" % "1.13.4" % "test",
-  // -- Logging --
-  "ch.qos.logback" % "logback-classic" % "1.1.3",
-  "com.typesafe.scala-logging" %% "scala-logging" % "3.1.0",
-  // -- Joda --
-  "joda-time" % "joda-time" % "2.9.6",
-  // -- Finch --
+  "org.scalacheck" %% "scalacheck" % "1.13.5" % "test",
+  "ch.qos.logback" % "logback-classic" % "1.2.3",
+  "com.typesafe.scala-logging" %% "scala-logging" % "3.5.0",
   "com.github.finagle" %% "finch-core" % FinchVersion,
   "com.github.finagle" %% "finch-circe" % FinchVersion,
-  // -- json/circe --
   "io.circe" %% "circe-core" % CirceVersion,
   "io.circe" %% "circe-generic" % CirceVersion,
   "io.circe" %% "circe-jawn" % CirceVersion
@@ -58,7 +33,7 @@ fork := true
 
 ivyScala := ivyScala.value map { _.copy(overrideScalaVersion = true) }
 
-initialCommands in console := "import scalaz._, Scalaz._"
+initialCommands in console := "import cats._, cats.data._, cats.implicits._"
 
 resolvers ++= Seq(
   "TM" at "http://maven.twttr.com",
@@ -66,15 +41,3 @@ resolvers ++= Seq(
   "Secured Central Repository" at "https://repo1.maven.org/maven2",
   Resolver.sonatypeRepo("snapshots")
 )
-
-// scalariform
-scalariformSettings
-
-ScalariformKeys.preferences := ScalariformKeys.preferences.value
-  .setPreference(AlignSingleLineCaseStatements, true)
-  .setPreference(DoubleIndentClassDeclaration, true)
-  .setPreference(IndentLocalDefs, true)
-  .setPreference(IndentPackageBlocks, true)
-  .setPreference(IndentSpaces, 2)
-  .setPreference(MultilineScaladocCommentsStartOnFirstLine, false)
-
